tests/return_missing_value_error.june
// error: return needs value


fun foo() -> i64 {
    return
}

println(foo())